--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@alexthvest/commands": "^1.3.1",
     "mongoose": "^5.8.3",
+    "node-fetch": "^2.6.0",
     "vk-io": "^4.0.0-rc.30"
   },
   "devDependencies": {
