--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "mongoose": "^5.8.3",
     "node-fetch": "^2.6.0",
     "puppeteer": "^2.0.0",
-    "vk-io": "^4.0.0-rc.30"
+    "vk-io": "^4.0.0-rc.30",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
